--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,21 +4,21 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Tour
-    url: tour
-    weight: 10
-  - name: News
-    url: post
+  - name: Home
+    url: /
     weight: 20
-  - name: People
-    url: people
-    weight: 30
-  - name: Events
-    url: event
-    weight: 40
+  - name: Research
+    url: Research
+    weight: 20
   - name: Publications
     url: publication
     weight: 50
+  - name: People
+    url: people
+    weight: 30
+  - name: News
+    url: post
+    weight: 20
   - name: Contact
     url: contact
     weight: 60
