--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: /
     weight: 20
   - name: Research
-    url: Research
+    url: research
     weight: 20
   - name: Publications
     url: publication
